<resources>
    <string name="app_name">MyNoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="last_updated">Last updated</string>
    <string name="delete_note">Delete note</string>
    <string name="word">Word:</string>
    <string name="calendar">calendar</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder:</string>
</resources>